Fixes #14: Lowers the letter-spacing in the difficult range
Displays between 768px and 991px were kicking the menu items down
onto another row. This query lowers the letter-spacing of the menu
items within that range to -1px (was 1px).

Solves it pretty well, if you ask me.

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -129,6 +129,12 @@
     }
 }
 
+@media (min-width: 768px) and (max-width: 991px) {
+    .navbar-default .nav li a {
+        letter-spacing: -1px;
+    }
+}
+
 .share-group .btn-info {
     background-color: #{{ site.color.primary }};
 }
